gh-338 - fixed date picker alignment issue

--- a/ui/src/main/webapp/css/style.css
+++ b/ui/src/main/webapp/css/style.css
@@ -107,3 +107,7 @@ md-option > div {
     line-height: 14px;
     color: red;
 }
+
+md-datepicker {
+    display: inline-table;
+}
